welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugSnail of type ()Boolean
and  method isFacingTrail in class SlugSnail of type ()Boolean
match expected type ?
   if (isFacingTrail==true){avance();baisseBrosse();leveBrosse();}
       ^SlugSnail:29: error: method isFacingTrail is defined twice
  conflicting symbols both originated in file 'plm.runtime16.SlugSnail'
def isFacingTrail():Boolean = {
    ^